Fixed some layout issues.

--- a/styles/countDown.css
+++ b/styles/countDown.css
@@ -2,8 +2,8 @@
     display:none;
     position:fixed;
     height:20%;
-    width:30%;
-    left: 35%;
+    width:60%;
+    left: 20%;
     top: 10%;
     z-index:100;
     color:orangered;
