--- a/styles/menu.css
+++ b/styles/menu.css
@@ -62,9 +62,8 @@ html, body {
 #container #buttons button.btn {
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom:1em;
-	width:50%;
-	height: 25%;
+	margin-bottom: 5px;
+	width: 60%;
 	font-size: 1.3em;
 }
 
@@ -78,8 +77,9 @@ html, body {
 .creditsDiv {
 	display: inline-block;
 	position: absolute;
-	right: 0px;
-	width: 10%;
+	margin: 10px;
+	bottom: 0;
+	right: 0;
 }
 
 /*-------------------- tutorial page --------------------*/
